[project]
name = "datasette-fixtures"
version = "0.1"
description = "Make the Datasette fixtures database available"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a30"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/datasette/datasette-fixtures"
Changelog = "https://github.com/datasette/datasette-fixtures/releases"
Issues = "https://github.com/datasette/datasette-fixtures/issues"
CI = "https://github.com/datasette/datasette-fixtures/actions"

[project.entry-points.datasette]
fixtures = "datasette_fixtures"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
